<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/questionsLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/questionsLeft" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:text="@string/timer" />

    <ImageButton
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:src="@android:drawable/ic_menu_close_clear_cancel" />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/question" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonAnswer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonAnswer1" />

        <Button
            android:id="@+id/buttonAnswer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonAnswer2" />

        <Button
            android:id="@+id/buttonAnswer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonAnswer3" />

        <Button
            android:id="@+id/buttonAnswer4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonAnswer4" />
    </LinearLayout>
</RelativeLayout>