<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- Bottom Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <!-- Bottom Left Button -->
        <Button
            android:id="@+id/buttonProgress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/buttonProgress"
            android:layout_weight="1" />

        <!-- Bottom Center Button -->
        <Button
            android:id="@+id/buttonLessons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/buttonLessons"
            android:layout_weight="1" />

        <!-- Bottom Right Button -->
        <Button
            android:id="@+id/buttonGenerator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/buttonGenerator"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>